--- a/build.gradle
+++ b/build.gradle
@@ -39,9 +39,17 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
 
+	//implementation 'org.eclipse.persistence:eclipselink:2.7.1'
+	implementation 'org.apache.poi:poi:5.3.0'
+	implementation 'org.apache.poi:poi-ooxml:5.3.0'
+	implementation 'org.apache.poi:poi-excelant:5.3.0'
+
+	implementation 'org.apache.xmlbeans:xmlbeans:5.2.2'
+
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
+	implementation 'com.microsoft.sqlserver:mssql-jdbc:12.8.1.jre11'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
