Snapshot comparator improved, not it's able to show in table format the resutls

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,6 +30,7 @@ server:
 logging:
   level:
     org:
+      root: INFO
       hibernate:
         SQL: DEBUG
         #postgresql://graffos_owner:npg_vh89HaOxmKeW@ep-flat-dawn-a5xftl28-pooler.us-east-2.aws.neon.tech/graffos?sslmode=require
